--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,11 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 18px;
-  line-height: 1.5; }
+  line-height: 1.5;
+  background: #eee;
+  color: #555;
+  margin: 0;
+  padding: 0; }
 
 a, a:visited {
   color: #44839c;
@@ -14,30 +18,59 @@ a:hover, a:active {
 ul {
   margin-left: 0;
   padding-left: 1.5em;
-  position: relative;
-  left: -1.5em; }
+  position: relative; }
 
 #container {
   width: 720px;
   margin: 0 auto 0 auto; }
 
 #header {
-  border-bottom: solid 4px #000; }
+  display: block;
+  background: #444;
+  background: -webkit-gradient(linear, left top, left bottom, from(#888888), to(#333333));
+  background: -moz-linear-gradient(top, #888888, #333333);
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 0em;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 3px 3px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 3px 3px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 3px 3px;
+  border-radius: 0em 0em 2em 2em;
+  -webkit-border-radius: 0em 0em 2em 2em;
+  -moz-border-radius: 0em 0em 2em 2em;
+  color: #fff; }
   #header h1 {
     font-size: 72px;
-    line-height: 81px; }
+    text-shadow: rgba(0, 0, 0, 0.3) 0 2px 3px;
+    display: inline-block;
+    margin: 0; }
   #header p.subtitle {
     font-size: 27px;
-    line-height: 1; }
+    line-height: 1;
+    font-style: italic;
+    display: inline-block;
+    margin: 0; }
 
 #content {
   margin-top: 2em; }
   #content h1 {
     font-size: 27px;
-    line-height: 1; }
+    line-height: 1;
+    margin-top: 2em; }
   #content h2 {
     font-size: 21px;
     line-height: 1.286; }
   #content h3 {
     font-size: 18px;
     line-height: 1.5; }
+
+code {
+  display: block;
+  border: 1px solid #AAA;
+  padding: 0.8em;
+  padding-left: 1.3em;
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
+  color: #fff;
+  background: #333; }
