--- a/styles/base.scss
+++ b/styles/base.scss
@@ -5,6 +5,10 @@ body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: $base-size;
     line-height: $rhythm / $base-size;
+    background: #eee;  
+    color: #555; 
+    margin: 0;
+    padding: 0;
 }
 
 a, a:visited {
@@ -21,7 +25,6 @@ ul {
     margin-left: 0;
     padding-left: 1.5em;
     position: relative;
-    left: -1.5em;
 }
 
 #container {
@@ -30,19 +33,39 @@ ul {
 }
 
 #header {
-    border-bottom: solid 4px #000;
+    display: block;
+    background: #444;
+    background: -webkit-gradient( linear, left top, left bottom, from(#888), to(#333) );
+    background: -moz-linear-gradient(top, #888, #333);
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 0em;
+    box-shadow: rgba(0,0,0,0.5) 0 3px 3px;  
+    -webkit-box-shadow: rgba(0,0,0,0.5) 0 3px 3px;
+    -moz-box-shadow: rgba(0,0,0,0.5) 0 3px 3px;
+    border-radius: 0em 0em 2em 2em;
+    -webkit-border-radius: 0em 0em 2em 2em;
+    -moz-border-radius: 0em 0em 2em 2em;
+    color: #fff;
 
     h1 {
         $size: 4 * $base-size;
         font-size: $size;
-        line-height: 3 * $rhythm;
+        text-shadow: rgba(0,0,0,.3) 0 2px 3px;
+        display: inline-block;
+        margin: 0;
     }
 
     p.subtitle {
         $size: 1.5 * $base-size;
         font-size: $size;
         line-height: $rhythm / $size;
+        font-style: italic;  
+        display: inline-block;
+        margin: 0;
     }
+ 
 }
 
 #content {
@@ -52,6 +75,7 @@ ul {
         $size: 1.5 * $base-size;
         font-size: $size;
         line-height: $rhythm / $size;
+        margin-top: 2em;
     }
 
     h2 {
@@ -65,4 +89,15 @@ ul {
         font-size: $size;
         line-height: $rhythm / $size;
     }
+}
+
+code{
+  display: block;
+  border: 1px solid #AAA;
+  padding: 0.8em;
+  padding-left: 1.3em;
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
+  color: #fff;
+  background: #333;
 }
