--- a/styles/base.css
+++ b/styles/base.css
@@ -45,12 +45,17 @@ ul {
     text-shadow: rgba(0, 0, 0, 0.3) 0 2px 3px;
     display: inline-block;
     margin: 0; }
+    #header h1 a, #header h1 a:visited {
+      color: #fff;
+      text-decoration: none;
+      border: none; }
   #header p.subtitle {
     font-size: 27px;
     line-height: 1;
     font-style: italic;
     display: inline-block;
-    margin: 0; }
+    margin: 0;
+    margin-left: 1em; }
 
 #content {
   margin-top: 2em; }
