--- a/demo/fast/modules/list/list.css
+++ b/demo/fast/modules/list/list.css
@@ -49,7 +49,7 @@
 }
 
 .list div.item button.due{
-  background-image: url("img/due.svg");
+  background-image: url("../../img/due.svg");
   border: none;
 
 }
@@ -59,15 +59,15 @@
 }
 
 .list div.item button.due:hover{
-  background-image: url("img/due_hover.svg");
+  background-image: url("../../img/due_hover.svg");
 }
 
 .list div.item button.done{
-  background-image: url("img/done.svg");
+  background-image: url("../../img/done.svg");
 }
 
 .list div.item button.done.done:hover{
-/*   background-image: url("img/undue.svg"); */
+/*   background-image: url("../../img/undue.svg"); */
 }
 
 .list div.item.done a{
@@ -75,9 +75,9 @@
 }
 
 .list div.item button.favorite{
-  background-image: url("img/fav.svg");
+  background-image: url("../../img/fav.svg");
 }
 .list div.item button.favorite.active,
 .list div.item button.favorite:hover{
-  background-image: url("img/fav_hover.svg");
+  background-image: url("../../img/fav_hover.svg");
 }
